# norts

./: .gitignore  Cargo.toml  README.md
norts/: Cargo.toml  README.md
norts/src/: bitboards.rs  board.rs  lib.rs  search.rs
src/: bitboards.rs  board.rs  main.rs  play.rs  search.rs
