[package]
name = "norts"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["ai", "tictactoe",]
publish = true
homepage = "https://github.com/MrPiggyPegasus/norts"
description = "A Noughts and Crosses/Tic Tac Toe library for move generation and an inbuilt hyper-fast solver."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

